Fixes, optimization, better UI/UX
